tools/hermes/tests/fixtures/const_generics/expected.stderr
  × type expected, got
  │   (fun x => True : ?m.2 → Prop)
   ╭─[[PROJECT_ROOT]/src/lib.rs:7:13]
 6 │ /// ```lean, hermes
 7 │ /// isSafe : fun _ => True
   ·             ──────┬──────
   ·                   ╰── here
 8 │ /// ```
   ╰────

Error: Lean verification failed
